[package]
name = "busser"
version = "0.3.0"
authors = ["Jerboa"]

edition="2021"

[[bin]]
name = "busser"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
axum-server = { version = "0.3", features = ["tls-rustls"] }
rand =    { git = "https://github.com/rust-lang-nursery/rand" }
openssl = { version = "0.10", features = ["vendored"] }
hex = "0.4.3"
chrono = "0.4.31"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10.2"
semver = "1.0.20"
libflate = "2"
quick-xml = "0.31.0"
indicatif = "0.17.8"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
cron = "0.12.1"
git2 = "0.18.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3